--- a/app/views/templates/students/library.html
+++ b/app/views/templates/students/library.html
@@ -26,7 +26,7 @@
 
   <style>
     .fondo {
-      background-color: rgba(47, 210, 255, 0.479);
+      background-color: #f4f4f4;
     }
     .btn-a {
       width: 25%;
