Update Styles and Tabs

--- a/app/views/templates/admin/dashboard.html
+++ b/app/views/templates/admin/dashboard.html
@@ -2,11 +2,10 @@
 <html lang="en" class="h-100">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="Antú Boccalandro, Juan C. Marticorena, Tomas Martinez">
-  <title>Lengua y Literatura Española</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="{url_for('static', filename='img/tab_logo.png')}">
+  <title>Dashboard</title>
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link
@@ -25,7 +24,7 @@
 
 <style>
   .fondo {
-    background-color: rgba(47, 210, 255, 0.479);
+    background-color: #f4f4f4;
   }
   .btn-a{
     width:25%;
