--- a/app/views/templates/admin/library.html
+++ b/app/views/templates/admin/library.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="{url_for('static', filename='img/tab_logo.png')}">
+    <title>Library</title>
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link
@@ -26,7 +23,7 @@
 
   <style>
     .fondo {
-      background-color: rgba(47, 210, 255, 0.479);
+      background-color: #f4f4f4;
     }
     .btn-a {
       width: 25%;
