--- a/app/views/templates/students/home.html
+++ b/app/views/templates/students/home.html
@@ -3,13 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="" />
-    <meta
-      name="author"
-      content="Mark Otto, Jacob Thornton, and Bootstrap contributors"
-    />
-    <meta name="generator" content="Hugo 0.108.0" />
-    <title>Students Main View</title>
+    <link rel="icon" href="{url_for('static', filename='img/tab_logo.png')}">
+    <title>Home</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -166,9 +161,8 @@
       <main class="px-3">
         <h1>Bienvenid@!</h1>
         <p class="lead">
-            Cover is a one-page template for building simple and beautiful home
-            pages. Download, edit the text, and add your own fullscreen background
-            photo to make it your own.
+            En esta página podrás ver y descargar los libros, archivos y material que suba tu profesor! 
+            ¡Que lo disfrutes!
         </p>
         <p class="lead">
           <a href="/library" class="btn btn-lg btn-light fw-bold border-white bg-white"
