--- a/app/views/templates/students/library.html
+++ b/app/views/templates/students/library.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="{url_for('static', filename='img/tab_logo.png')}">
+    <title>Library</title>
+
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link
