Update requierd fields and app session configs

--- a/app/views/templates/admin/dashboard.html
+++ b/app/views/templates/admin/dashboard.html
@@ -105,19 +105,19 @@
             <div class="mb-3">
               <label for="field_book_name" class="form-label">Nombre del libro:</label>
               <input type="text"
-                class="form-control" name="field_book_name" id="field_book_name" aria-describedby="helpId" placeholder="Escriba el nombre del libro">
+                class="form-control" name="field_book_name" id="field_book_name" aria-describedby="helpId" placeholder="Escriba el nombre del libro" required>
             </div>
 
             <div class="mb-3">
               <label for="field_book_cover" class="form-label">Portada:</label>
               <input type="file"
-                class="form-control" name="field_book_cover" id="field_book_cover" aria-describedby="helpId" placeholder="Seleccione la imagen" accept=".jpeg,.jpg,.png">
+                class="form-control" name="field_book_cover" id="field_book_cover" aria-describedby="helpId" placeholder="Seleccione la imagen" accept=".jpeg,.jpg,.png"  required>
             </div>
 
             <div class="mb-3">
                 <label for="field_book_file" class="form-label">Archivo:</label>
                 <input type="file"
-                  class="form-control" name="field_book_file" id="field_book_file" aria-describedby="helpId" placeholder="Seleccione un archivo" accept=".pdf,.doc,.docx">
+                  class="form-control" name="field_book_file" id="field_book_file" aria-describedby="helpId" placeholder="Seleccione un archivo" accept=".pdf,.doc,.docx" required>
               </div>
 
               <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
