--- a/app/views/templates/admin/library.html
+++ b/app/views/templates/admin/library.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="{url_for('static', filename='img/tab_logo.png')}">
+    <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/x-icon">
     <title>Library</title>
 
     <!-- Bootstrap CSS v5.2.1 -->
