Update styles crashed

--- a/app/views/templates/admin/dashboard.html
+++ b/app/views/templates/admin/dashboard.html
@@ -33,8 +33,13 @@
     color: #0a0a23;
   }
 
+  .custom-download-color {
+    background-color: #f5f6f;
+  }
+
   .btn:hover {
     background-color: #f5f6f7 !important;
+    color: black !important;
   }
 
   .rounded-top-image {
