--- a/app/views/templates/admin/home.html
+++ b/app/views/templates/admin/home.html
@@ -143,7 +143,7 @@
     </header>
 
     <main class="px-3">
-      <h1 class="text-white">Bienvenido de nuevo { session['user'] }!</h1>
+      <h1 class="text-white">Bienvenido de nuevo {{ session['user'] }}!</h1>
       <p class="lead r text-white">
         En esta página podrás administrar el contenido de la página web, añadiendo y eliminando libros que sus alumnos podrán ver luego. ¡Que lo disfrutes!
       </p>
