--- a/app/views/templates/students/library.html
+++ b/app/views/templates/students/library.html
@@ -36,6 +36,9 @@
 
   .btn:hover {
     background-color: #f5f6f7 !important;
+    box-shadow: 2px 0px 147px 0px rgba(255, 190, 0, 1);
+    -webkit-box-shadow: 2px 0px 147px 0px rgba(255, 190, 0, 1);
+    -moz-box-shadow: 2px 0px 147px 0px rgba(255, 190, 0, 1);
   }
 
   .rounded-top-image {
