Update source font

--- a/app/views/templates/admin/home.html
+++ b/app/views/templates/admin/home.html
@@ -17,6 +17,13 @@
   /*
      * Globals
      */
+
+  @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+  
+  * {
+    font-family: 'Varela Round', sans-serif;
+  }
+
   .fondo {
     background-color: rgba(47, 210, 255, 0.479);
   }
