--- a/app/views/templates/admin/dashboard.html
+++ b/app/views/templates/admin/dashboard.html
@@ -8,13 +8,20 @@
   <title>Dashboard</title>
 
   <!-- Bootstrap CSS v5.2.1 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
 
   <!-- Bootstrap icons v5.2.1 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
 </head>
 
 <style>
+  @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
+  * {
+    font-family: 'Varela Round', sans-serif;
+  }
+
   .fondo {
     background-color: #3b3b4f;
   }
@@ -51,13 +58,16 @@
 <body class="fondo">
   <header>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0a0a23;" aria-label="Fourth navbar example">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0a0a23;"
+      aria-label="Fourth navbar example">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo de la página web" width="40" height="40" />
+          <img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo de la página web" width="40"
+            height="40" />
         </a>
         <a class="navbar-brand" href="/admin">Virtual Library</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04"
+          aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -79,7 +89,8 @@
 
   <!-- Button trigger modal -->
   <div class="d-flex align-items-center justify-content-center">
-    <button class="btn btn-success" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Subir Libro <i class="bi bi-plus-square"></i> </button>
+    <button class="btn btn-success" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Subir Libro <i
+        class="bi bi-plus-square"></i> </button>
   </div>
 
   <br>
@@ -97,17 +108,20 @@
 
             <div class="mb-3">
               <label for="field_book_name" class="form-label">Nombre del libro:</label>
-              <input type="text" class="form-control" name="field_book_name" id="field_book_name" aria-describedby="helpId" placeholder="Escriba el nombre del libro" required>
+              <input type="text" class="form-control" name="field_book_name" id="field_book_name"
+                aria-describedby="helpId" placeholder="Escriba el nombre del libro" required>
             </div>
 
             <div class="mb-3">
               <label for="field_book_cover" class="form-label">Portada:</label>
-              <input type="file" class="form-control" name="field_book_cover" id="field_book_cover" aria-describedby="helpId" placeholder="Seleccione la imagen" accept=".jpeg,.jpg,.png" required>
+              <input type="file" class="form-control" name="field_book_cover" id="field_book_cover"
+                aria-describedby="helpId" placeholder="Seleccione la imagen" accept=".jpeg,.jpg,.png" required>
             </div>
 
             <div class="mb-3">
               <label for="field_book_file" class="form-label">Archivo:</label>
-              <input type="file" class="form-control" name="field_book_file" id="field_book_file" aria-describedby="helpId" placeholder="Seleccione un archivo" accept=".pdf,.doc,.docx" required>
+              <input type="file" class="form-control" name="field_book_file" id="field_book_file"
+                aria-describedby="helpId" placeholder="Seleccione un archivo" accept=".pdf,.doc,.docx" required>
             </div>
 
             <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
@@ -141,17 +155,20 @@
             <tr>
               <td class="text-white">{{ book[0] }}</td>
               <td>
-                <img src="/resources/covers/{{ book[2] }}" alt="" width="80" height="100" class="img-fluid rounded" loading="lazy">
+                <img src="/resources/covers/{{ book[2] }}" alt="" width="80" height="100" class="img-fluid rounded"
+                  loading="lazy">
               </td>
               <td>
-                <a href="/resources/download_book/{{ book[1] }}" download="{{ book[1] }}" class="btn btn-primary">Descargar <i class="bi bi-download"></i></a>
+                <a href="/resources/download_book/{{ book[1] }}" download="{{ book[1] }}"
+                  class="btn btn-primary">Descargar <i class="bi bi-download"></i></a>
               </td>
               <td>
                 <form action="/admin/dashboard/actions/delete" method="POST" class="form">
                   <input type="hidden" name="book_name" value="{{ book[0] }}">
                   <input type="hidden" name="book_filename" value="{{ book[1] }}">
                   <input type="hidden" name="book_covername" value="{{ book[2] }}">
-                  <button type="submit" class="btn btn-danger button" onclick="showAlert()">Eliminar <i class="bi bi-x-square"></i></button>
+                  <button type="submit" class="btn btn-danger button" onclick="showAlert()">Eliminar <i
+                      class="bi bi-x-square"></i></button>
                 </form>
 
               </td>
@@ -163,9 +180,13 @@
     </div>
   </div>
   <!-- Bootstrap JavaScript Libraries -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+    crossorigin="anonymous"></script>
 
   <script>
     function showAlert() {
