--- a/app/views/templates/admin/library.html
+++ b/app/views/templates/admin/library.html
@@ -8,13 +8,20 @@
   <title>Library</title>
 
   <!-- Bootstrap CSS v5.2.1 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
 
   <!-- Bootstrap icons v5.2.1 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
 </head>
 
 <style>
+  @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
+  * {
+    font-family: 'Varela Round', sans-serif;
+  }
+
   .fondo {
     background-color: #3b3b4f;
   }
@@ -50,45 +57,29 @@
 <body class="fondo">
   <header>
     <!-- Navbar -->
-    <nav
-      class="navbar navbar-expand-lg navbar-dark" style="background-color: #0a0a23;" aria-label="Fourth navbar example"
-    >
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0a0a23;"
+      aria-label="Fourth navbar example">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img
-            src="{{ url_for('static', filename='img/logo.png') }}"
-            alt="Logo de la página web"
-            width="40"
-            height="40"
-          />
+          <img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo de la página web" width="40"
+            height="40" />
         </a>
         <a class="navbar-brand" href="/admin">Virtual Library</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarsExample04"
-          aria-controls="navbarsExample04"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04"
+          aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarsExample04">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/admin"
-                >Inicio</a
-              >
+              <a class="nav-link" aria-current="page" href="/admin">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/admin/admin_library">Library</a>
             </li>
           </ul>
-          <a class="btn btn-custom-color" href="/logout" role="button"
-            >Log Out</a
-          >
+          <a class="btn btn-custom-color" href="/logout" role="button">Log Out</a>
         </div>
       </div>
     </nav>
@@ -108,7 +99,7 @@
 
     <script>
       var alertList = document.querySelectorAll(".alert");
-      alertList.forEach(function(alert) {
+      alertList.forEach(function (alert) {
         new bootstrap.Alert(alert);
       });
     </script>
@@ -120,12 +111,14 @@
           {% for book in data %}
           <div class="col">
             <div class="card shadow-sm">
-              <img src="/resources/covers/{{ book[2] }}" width="100%" height="225" class="rounded-top-image" loading="lazy" />
+              <img src="/resources/covers/{{ book[2] }}" width="100%" height="225" class="rounded-top-image"
+                loading="lazy" />
               <div class="card-body" style="background-color: #0a0a23;">
                 <h2 class="card-text text-white">{{ book[0] }}</h2>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a href="/resources/download_book/{{book[1]}}" download="{{ book[1] }}" class="btn color-boton">Descargar <i class="bi bi-download"></i></a>
+                    <a href="/resources/download_book/{{book[1]}}" download="{{ book[1] }}"
+                      class="btn color-boton">Descargar <i class="bi bi-download"></i></a>
                   </div>
                 </div>
               </div>
@@ -141,9 +134,13 @@
   </footer>
   <!-- Bootstrap JavaScript Libraries -->
   <!-- Bootstrap JavaScript Libraries -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
