--- a/app/views/templates/admin/home.html
+++ b/app/views/templates/admin/home.html
@@ -147,7 +147,7 @@
         <nav class="nav nav-masthead justify-content-center float-md-end">
           <a class="nav-link fw-bold py-1 px-0 custom-color" href="/admin">Home</a>
           <a class="nav-link fw-bold py-1 px-0 custom-color" href="/admin/dashboard">Dashboard</a>
-          <a class="nav-link fw-bold py-1 px-0 custom-color" href="/login">Login</a>
+          <a class="nav-link fw-bold py-1 px-0 custom-color" href="/logout">Logout</a>
         </nav>
       </div>
     </header>
