--- a/app/views/templates/admin/library.html
+++ b/app/views/templates/admin/library.html
@@ -110,10 +110,10 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           {% for book in data %}
           <div class="col">
-            <div class="card shadow-sm">
+            <div class="card shadow-sm" style="background-color: #0a0a23;">
               <img src="/resources/covers/{{ book[2] }}" width="100%" height="225" class="rounded-top-image"
                 loading="lazy" />
-              <div class="card-body" style="background-color: #0a0a23;">
+              <div class="card-body">
                 <h2 class="card-text text-white">{{ book[0] }}</h2>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
