--- a/app/views/templates/students/library.html
+++ b/app/views/templates/students/library.html
@@ -117,7 +117,7 @@
           {% for book in data %}
           <div class="col">
             <div class="card shadow-sm" style="background-color: #0a0a23;">
-              <img src="/resources/covers/{{ book[2] }}" class="card-img-top rounded-top-image" alt="Portada del libro"
+              <img src="/resources/covers/{{ book[2] }}" class="card-img-top img-fluid rounded-top-image" alt="Portada del libro"
                 loading="lazy" />
               <div class="card-body">
                 <h2 class="card-text text-white">{{ book[0] }}</h2>
@@ -134,6 +134,7 @@
         </div>
       </div>
     </div>
+    
     
     
   </main>
