--- a/app/views/templates/students/library.html
+++ b/app/views/templates/students/library.html
@@ -79,7 +79,7 @@
               <a class="nav-link text-white" href="/library">Librería</a>
             </li>
           </ul>
-          <a class="btn color-boton" href="/login" role="button">Iniciar sesión</a>
+          <a class="btn btn-custom-color" href="/login" role="button">Log In</a>
         </div>
       </div>
     </nav>
