--- a/app/views/templates/students/library.html
+++ b/app/views/templates/students/library.html
@@ -116,7 +116,7 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           {% for book in data %}
           <div class="col">
-            <div class="card shadow-sm" style="background-color: #0a0a23;">
+            <div class="card shadow-sm" style="background-color: #0a0a23; width: 18rem;">
               <img src="/resources/covers/{{ book[2] }}" class="card-img-top rounded-top-image" alt="Portada del libro"
                 loading="lazy" />
               <div class="card-body">
@@ -134,6 +134,7 @@
         </div>
       </div>
     </div>
+    
     
     
     
